--- a/projects/ng-aquila/src/button/plain-button.component.scss
+++ b/projects/ng-aquila/src/button/plain-button.component.scss
@@ -34,6 +34,7 @@
 
   &:disabled {
     @include var(color, plain-button-disabled-color);
+    cursor: not-allowed;
   }
 
   .nx-plain-button__content-wrapper {
